Deleted useless files

--- a/templates/addUserName.html
+++ b/templates/addUserName.html
@@ -10,7 +10,8 @@
 	{{msg}}
 	{% endif%}
 	<form action="/addUserName" method="post">
-		<input type="name" name="userName">
+        Username: <input type="name" name="userName"><br>
+        Name: <input type="name" name="name"><br>
 		<input type="submit" name="submit">
 	</form>
 {% endblock %}
