--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -9,11 +9,11 @@
 <hr>
 
 <form action="/editprofile" method='POST'>
-    <span>Username : </span><input type="text" placeholder="Username" value={{face.userName}} name="userName" id="userName"><br>
-    <span>Name : </span><input type="text" placeholder="Name" value={{face.name}} name="name" id="name"><br>
+    <span>Username : </span>{{face.userName}}<br>
+    <span>Name : </span>{{face.name}}<br>
     <span>UPI ID : </span><input type="text" placeholder="UPI ID" value={{face.upiId}} name="upiId" id="upiId"><br>
     <span>Contact Number : </span><input type="tel" placeholder="Contact Number" value={{face.contactNumber}} name="contactNumber" id="contactNumber"><br>
-    <span>Email ID : </span><input type="email" placeholder="Email ID" value={{face.emailId}} name="emailId" id="emailId"><br>
+    <span>Email ID : </span>{{face.emailId}}<br>
     <span>Company : </span><input type="text" placeholder="Company" value={{face.company}} name="company" id="company"><br>
     <span>Address : </span><input type="text" placeholder="Address" value={{face.address}} name="address" id="address"><br>
     <span>Facebook URL : </span><input type="url" placeholder="Facebook URL" value={{face.fb_url}} name="fb_url" id="fb_url"><br>
